--- a/sections/Analyse/SystemDescription/EmbeddedSystemsOverview.tex
+++ b/sections/Analyse/SystemDescription/EmbeddedSystemsOverview.tex
@@ -1,4 +1,4 @@
-\chapter{System Description}
+\chapter{System Description}\label{SystemDescription}
 As a part of this semester project the developed products must take the form of
 embedded systems, which makes use of the techiques taught in the 'Real Time
 Systems (RTS)' course, or the 'Machine Intelligence (MI)' course. In order to
