--- a/sections/Introduction.tex
+++ b/sections/Introduction.tex
@@ -7,14 +7,19 @@ presence is not as noticeable as for example a PC. These computers are built
 into a large part of all electronic devices. This class of computer systems is
 also known as embedded systems.\nl
 
-In this project we will focus on embedded systems and end up with a physical product, which qualifies as an embedded system. This presents some issues
-as there is a limited amount of memory and processing power. Therefore, this project will also be focused on optimizing the software for the platform. Furthermore this project will include aspects from machine intelligence and real time systems. 
+
+%Focuserer vi på at optimizere softwaren?
+This projecs focuses on embedded systems and ends up with a physical product,
+which qualifies as an embedded system. This presents some issues as there is a
+limited amount of memory and processing power. Therefore, this project will be
+focused on optimizing the software for the platform. Furthermore this project
+will include aspects from machine intelligence and real time systems.
 % The theme of this semester is Embedded systems. This means that the focus of
 % the project will be working with a set of constraints that must be balanced.
 % Furthermore the project should include techniques from the machine intelligence
 % course and the real-time systems course.
 
-\section{Initial Problem}
+\section{Initial Problem}\label{InitialProblem}
 A recurring project proposal idea is a challenge proposed by the semester coordinator Ren\'e
 Hansen. The challenge is:
 
