--- a/sections/PhysTheory/ProjectileMotion.tex
+++ b/sections/PhysTheory/ProjectileMotion.tex
@@ -143,27 +143,27 @@ results in the following formula:
 t=\frac{x}{v_0*cos(a)}
 \end{equation}
 
-\subsection{Air Resistance (Not Done)}\label{AirResDisc}
-For the purpose of calculating the trajectory of the projectile in \autoref{} a
-formula has been used which does not account for the effect of air resistance.
-This section will be used to discuss why this is the case, and to argue why the
-effect of air resistance is negligible in the case of firing the chosen
-projectile.\nl
-
-In cases where a projectile is fired at high speeds, and is travelling for a
-longer period of time it is important to factor in the effect of air resistance,
-as this can have a significant effect on the trajectory of the projectile. On
-the other hand when we have relatively slow moving projectiles which are only mid
-air for a short duration, the effect of air resistance becomes much less
-important.\nl
-
-% Ville gerne vise dette ved at udregne med og uden luftmodstand, men fuck
-% differentialligninssystemer.
-Another reason for using the simplified formula which disregards air resistance
-is that the Lego Nxt has limited processing power, and that the turret has
-strict deadlines. This leads to a situation where the speed of calculation is
-more important than the unnecessary precision of factoring in air resistance.
-
+% \subsection{Air Resistance (Not Done)}\label{AirResDisc}
+% For the purpose of calculating the trajectory of the projectile in \autoref{} a
+% formula has been used which does not account for the effect of air resistance.
+% This section will be used to discuss why this is the case, and to argue why the
+% effect of air resistance is negligible in the case of firing the chosen
+% projectile.\nl
+% 
+% In cases where a projectile is fired at high speeds, and is travelling for a
+% longer period of time it is important to factor in the effect of air resistance,
+% as this can have a significant effect on the trajectory of the projectile. On
+% the other hand when we have relatively slow moving projectiles which are only mid
+% air for a short duration, the effect of air resistance becomes much less
+% important.\nl
+% 
+% % Ville gerne vise dette ved at udregne med og uden luftmodstand, men fuck
+% % differentialligninssystemer.
+% Another reason for using the simplified formula which disregards air resistance
+% is that the Lego Nxt has limited processing power, and that the turret has
+% strict deadlines. This leads to a situation where the speed of calculation is
+% more important than the unnecessary precision of factoring in air resistance.
+% 
 
 % All of these variables can be deduced from two key pieces of information; the
 % starting velocity, the angle of fire and the height of firing. For the
