--- a/sections/Design/TurretDesign.tex
+++ b/sections/Design/TurretDesign.tex
@@ -36,9 +36,13 @@ NXT is laying flat on the back inside the base. In the design where the NXT was
 upright the screen and the buttons on the front was accessible, but all the I/O
 ports on the end was hard to get to. This design was not chosen mostly because
 of the height but also because it was hard to charge the NXT. The height is a
-factor due to the fact that the taller the turret gets the more unstaple it
-becomes. This design also placed a lot of the weight on one side of turret
-which med it more unstable.\nl
+factor due to the fact that the taller the turret gets the more unstable it
+becomes. This is because the base sits in on top of the turning mechanism, which
+is a narrow point. This causes the turret to tilt when it turns. This is a
+problem due to the fact that if the turret were to make a fast turn it could be
+overthrown. 
+This design also placed a lot of the weight on one side of turret which made it
+more unstable.\nl
 
 In the chosen design where the NXT is laying on the back inside the turret the
 I/O ports are fully accessible. This design also makes the turret a lot shorter
