--- a/sections/Sensors/Ultrasonic.tex
+++ b/sections/Sensors/Ultrasonic.tex
@@ -1,21 +1,28 @@
 \section{Ultrasonic Sensor}\label{SensTheoUltra}
-For the purpose of measuring the distance to the chosen target, the turret makes
-use of two ultrasonic sensors. These sensors work by producing sound waves from
+The ultrasonic sensors works by producing sound waves from
 one of two frontal holes, which is then bounced back by an object and received
 by the second hole. This is displayed in the illustration below
 \autoref{soundWavesSensor}.
 The delay between producing and receiving the sound wave is used to determine the
-distance to a given object. 
+distance to a given object.
+
+% For the purpose of measuring the distance to the chosen target, the turret makes
+% use of two ultrasonic sensors. These sensors work by producing sound waves from
+% one of two frontal holes, which is then bounced back by an object and received
+% by the second hole. This is displayed in the illustration below
+% \autoref{soundWavesSensor}.
+% The delay between producing and receiving the sound wave is used to determine the
+% distance to a given object. 
 
 \figx{soundWavesSensor}{Visualization of the ultrasonic sensor.}
 The described sensor is a standardized ultrasonic sensor from Lego NXT. The
-sensor's technical specifications \citep{Ultrasonic_sensor} can be found below.
+sensor's technical specifications \citep{Ultrasonic_sensor} can be found below:
 \begin{itemize}
   \item Has a max range of 2.5m
   \item Has a precision of +/- 3cm
-  \item Looses precision after 1.5m
+  \item Loses precision after 1.5m
   \item Has a 15ms delay between readings
-  \item Works best with large, hard-sized objects
+  \item Works best with hard, large-sized objects
   \item Each measurement outputs the distance in the form of a single integer
   with a value between 0 and 255cm
 \end{itemize}
@@ -60,13 +67,13 @@ turret.\nl
 % as a part of the initial turret design, it does not include any formalized data
 % sets. As such, these were the conclusions which could be drawn:\nl
 
-\subsubsection{\fix{Using Blinders}{Skal vi rent faktisk bruge dem?}}
+\subsubsection{\fix{Using Blinders}{Skal vi rent faktisk bruge dem?}} 
 At first when testing the ultrasonic sensors, it was determined that the
 sensor's ability to accurately measure the distance was subject to interferance
 by the surroundings. In effect this vastly reduced the maximum distance of the
 sensor, and as such, a lot of different attempts were made in order to solve
 this problem. As this was done as a part of the initial design phase, the
-different turret designs were not recorded. These tests resulted in the
+different turret designs were not recorded. The tests resulted in the
 following conclusion:\nl
 
 \textit{\textbf{The ultrasonic sensors can use blinders to increase their
@@ -101,17 +108,16 @@ sensor was able to determine the distance with better precision when it is
 shielded and the object was in the landscape position. \nl
 
 It can then be concluded that the shielded sensor performed a lot better than
-the unshielded, it can also be concluded that the placement of the object can
+the unshielded, it can also be concluded that the dimensions of the object can
 have a big impact. This is due to the fact that the sensor does not have a very
 large field of view. Therefore, the object should be wider rather than taller.
 
 \subsubsection{Additional Design notes}
 These tests also found the following conclusion:\nl
 
-The sensor should not be placed close to the ground. While testing it was
-determined that the sensor should not be placed close to the ground, as this
-resulted in a vast degredation of the data. Compared to the technical
-specification which stated that the maximum range is 255cm, this design resulted
+\fix{The sensor should not be placed close to the ground.}{The small height
+distance from the ground matters and how do we see this?} While testing it was
+determined that the sensor should not be placed close to the ground, as this resulted in a vast degredation of the data. Compared to the technical specification which stated that the maximum range is 255cm, this design resulted
 in a maximum distance of ~100cm.\nl
 
 \subsection{Ultrasonic Sensor Test - Distance}
@@ -124,7 +130,7 @@ this test is presented below in \autoref{table:UltDistTestDat}. The complete
 data sets can be found in \autoref{UltraDistTestData}.
 
 \dataTable{UltrasonicDistanceTestData}{Average measured distance compared to
-the actual distance.}{UltDistTestDat}
+the actual distance.}{UltDistTestData}
 
 
 % \subsection{Ultrasonic Sensor Test - Cone of Vision}
