--- a/sections/Sensors/Camera.tex
+++ b/sections/Sensors/Camera.tex
@@ -1,5 +1,5 @@
 \section{Camera}\label{SensorTheory}
-For the purpose of identifying and tracking a target, the developed turret will
+For the purpose of identifying and tracking a target, the turret will
 make use of a specialized camera, which is capable of identifying coloured
 objects. In order to use the camera, the user specifies a colour of choice,
 which will then be searched for. The colours are set using a program called
@@ -34,7 +34,8 @@ long table, pointing towards a target at the other end. The table is marked with
 a number of lines each representing a distance of 25cm from the turret's
 location. The target for this test is a rectangular cardboard cutout, which is
 used to hold a sheet of coloured paper which is folded around it. Behind the
-coloured paper is a dark background which is used in some, but not all tests.
+coloured paper is a dark background which is used in some, but not all
+tests.
 This setup can be seen in \autoref{SensorCamSetup.JPG}.
 
 \figx[0.1]{SensorCamSetup.JPG}{Setup for the camera test (With Background).}
@@ -43,7 +44,7 @@ This setup can be seen in \autoref{SensorCamSetup.JPG}.
 In order to determine what colour can best be detected, the target is wrapped
 with a piece of coloured paper, and is then placed at a distance of 2m from the
 turret. The camera is then used to search for the specified colour. As explained
-in \autoref{SensTheoCam} this data consists of rectangular segments of the
+in \autoref{SensorTheory} this data consists of rectangular segments of the
 identified colour, and these segments sizes and colours. The quality of the
 individual colours is determined by looking at two factors. The first factor is
 the consistency of the recorded data, which is determined by the variance in the
@@ -115,5 +116,4 @@ recognize the target at all distances, but instead multiple colours need to be
 recognized based on the distance to the target. This problem has two identified
 solutions, either the camera is programmed to recognize a number of different
 shades of orange, or the turret will be limited to only operate in well and
-consistently lit areas. The solution to this problem will be further explored
-as part of the final implementation in \autoref{}.
+consistently lit areas.
