- Added picture of ballista  - Removed a bad picture in ultrasonic

--- a/sections/Sensors/Ultrasonic.tex
+++ b/sections/Sensors/Ultrasonic.tex
@@ -27,10 +27,10 @@ sensor's technical specifications \citep{Ultrasonic_sensor} can be found below:
   with a value between 0 and 255cm
 \end{itemize}
 
-An image of this sensor as mounted in the turret can be seen in
-\autoref{UltrasoundPic}.
-\figx[0.2]{UltrasoundPic}{The two ultrasonic sensors and the camera mounted
-on the turret.}
+% An image of this sensor as mounted in the turret can be seen in
+% \autoref{UltrasoundPic}.
+% \figx[0.2]{UltrasoundPic}{The two ultrasonic sensors and the camera mounted
+% on the turret.}
 
 \section{Ultrasonic Sensor Testing}\label{SensorTest}
 The first sensor we need to test is the ultrasonic distance sensor. These tests
@@ -84,22 +84,22 @@ used to present data which compares the distance tests of the ultrasonic sensor,
 both with and without blinders.
 
 \graphL{Actual distance [cm]}{Measured distance
-[cm]}{shieldedBoxStanding,shieldedBoxLandscape}{Box Standing, Box
-Landscape}{Results with a shielded sensor and a box h.
+[cm]}{shieldedBoxStanding,shieldedBoxLandscape}{Box vertical, Box
+horizontal}{Results with a shielded sensor and a box h.
 14.2cm and w. 9cm}{shieldedTestBox}
 
 \graphL{Actual distance [cm]}{Measured distance
-[cm]}{unshieldedBoxStanding,unshieldedBoxLandscape}{Box Standing, Box
-Landscape}{Results with a unshielded sensor and a box h.
+[cm]}{unshieldedBoxStanding,unshieldedBoxLandscape}{Box vertical, Box
+horizontal}{Results with a unshielded sensor and a box h.
 14.2cm and w. 9cm}{unshieldedTestBox}
 
 \graphL{Actual distance [cm]}{Measured distance
-[cm]}{shieldedPaperStanding,shieldedPaperLandscape}{Paper Standing, Paper
-Landscape}{Results with a shielded sensor and a A4 Paper}{shieldedTestPaper}
+[cm]}{shieldedPaperStanding,shieldedPaperLandscape}{Paper vertical, Paper
+horizontal}{Results with a shielded sensor and a A4 Paper}{shieldedTestPaper}
 
 \graphL{Actual distance [cm]}{Measured distance
-[cm]}{unshieldedPaperStanding,unshieldedPaperLandscape}{Paper Standing, Paper
-Landscape}{Results with a unshielded sensor and a A4 Paper}{unshieldedTestPaper}
+[cm]}{unshieldedPaperStanding,unshieldedPaperLandscape}{Paper vertical, Paper
+horizontal}{Results with a unshielded sensor and a A4 Paper}{unshieldedTestPaper}
 
 
 As seen in \autoref{graph:shieldedTestBox}, \autoref{graph:unshieldedTestBox},
